--- a/less/base/_responsive.less
+++ b/less/base/_responsive.less
@@ -1129,6 +1129,12 @@
                         .strength-item
                         {
                             height: 200px;
+                            .image
+                            {
+                                margin: 0 ;
+                                margin-top: px;
+                                padding: 0;
+                            }
                         }
                         .content
                         {
@@ -1136,7 +1142,7 @@
                             box-sizing: border-box;
                             img
                             {
-                                padding-top: 10px;
+                                padding-top: 5px;
                             }
                             .title
                             {
