--- a/css/style.css
+++ b/css/style.css
@@ -65,8 +65,8 @@ input {
 }
 .banner-background {
   background-image: url(../img/header-bg.png);
+  background-size: cover;
   background-repeat: no-repeat;
-  background-position: -200px -330px;
   background-color: #070303;
   height: 945px;
 }
@@ -331,6 +331,7 @@ input {
   border-top-left-radius: 7px;
   border-bottom-right-radius: 7px;
   background-color: #dd2f31;
+  cursor: pointer;
 }
 .product .product-inner .product-detail-cover .product-detail-boder .product-price {
   margin-top: 37px;
@@ -822,12 +823,17 @@ footer .footer-main .footer-end-inner .footer-item ul .link-item a:hover {
   .wrapper .strength .container .strength-inner .strength-col .strength-item {
     height: 200px;
   }
+  .wrapper .strength .container .strength-inner .strength-col .strength-item .image {
+    margin: 0 ;
+    margin-top: px;
+    padding: 0;
+  }
   .wrapper .strength .container .strength-inner .strength-col .content {
     padding: 0 5px;
     box-sizing: border-box;
   }
   .wrapper .strength .container .strength-inner .strength-col .content img {
-    padding-top: 10px;
+    padding-top: 5px;
   }
   .wrapper .strength .container .strength-inner .strength-col .content .title {
     font-size: 14px;
