--- a/less/base/_header.less
+++ b/less/base/_header.less
@@ -2,8 +2,8 @@
 .banner-background
 {
     background-image: url(../img/header-bg.png);
+    background-size: cover;
     background-repeat: no-repeat;
-    background-position: -200px -330px;
     background-color: rgb(7, 3, 3);
     height: 945px;
     .logo-moblie
@@ -326,6 +326,7 @@
                                     border-top-left-radius: 7px;
                                     border-bottom-right-radius: 7px;
                                     background-color: #dd2f31;
+                                    cursor: pointer;
                                 }
                             }
                         }
