--- a/less/base/_header.less
+++ b/less/base/_header.less
@@ -355,9 +355,9 @@
             }
             &:hover
             {
-                -webkit-box-shadow: -1px 7px 13px 0px rgba(0,0,0,0.47);
-                -moz-box-shadow: -1px 7px 13px 0px rgba(0,0,0,0.47);
-                box-shadow: -1px 7px 13px 0px rgba(0,0,0,0.47);
+                -webkit-box-shadow: 0 0 2.5px rgba(0,0,0,0.2);
+                -moz-box-shadow: 0 0 2.5px rgba(0,0,0,0.2);
+                box-shadow: 0 0 2.5px rgba(0,0,0,0.2);
                 .product-image
                 {
                     .action
