--- a/less/base/_responsive.less
+++ b/less/base/_responsive.less
@@ -243,6 +243,7 @@
                 {
                    display: block;
                    margin: 0 auto;
+                   height: 35px;
                 }
             }
             .header
@@ -265,7 +266,8 @@
                                 .nav-icon
                                 {
                                     display: block;
-                                    font-size: 25px;
+                                    padding-top: 4px;
+                                    font-size: 23px;
                                 }
         
                                 .menu{
@@ -660,8 +662,10 @@
         {   
             .logo-moblie
             {
+                height: 20px;  
                 img
                 {
+                   height: 35px;
                 }
             }
             .header
