--- a/less/base/_footer.less
+++ b/less/base/_footer.less
@@ -53,7 +53,7 @@ footer
         {
             margin-top: 55px;
             padding-bottom: 32px;
-            margin-right:-10px;
+        
             .footer-item
             {
                 width: 25%;
@@ -80,7 +80,6 @@ footer
                             font-size: 14px;
                             font-family: 'Poppins';
                             font-weight: 300;
-                            margin-left: 15px;
                             &:hover
                             {
                                 color: burlywood;
@@ -107,6 +106,6 @@ footer
         padding: 18px 0;
         margin: 0 auto;
         color: #5e5e5e;
-        
+        overflow: hidden;
     }
 }
