--- a/less/base/_footer.less
+++ b/less/base/_footer.less
@@ -103,7 +103,7 @@ footer
         font-weight: 300;
         max-width: 490px;
         width: 100%;
-        padding: 18px 0;
+        padding-top: 18px;
         margin: 0 auto;
         color: #5e5e5e;
         overflow: hidden;
