--- a/less/base/_responsive.less
+++ b/less/base/_responsive.less
@@ -446,16 +446,18 @@
             }
             .product-inner
             {   
-
+                margin: 0 15px;
                 .product-detail-cover
                 {
                     width: calc(100%/3);
                     .product-detail-boder
                     {
                         .product-image
-                        {
+                        { 
+                            padding-top: 5px;
                             img
                             {  
+
                             }
                             .action
                             { 
@@ -979,7 +981,7 @@
                                      
                                     }
                                     a{
-
+                                        font-size: 12px;
                                     }
                                 }
                             }
@@ -1128,32 +1130,32 @@
                         .strength-item
                         {
                             height: 200px;
-                            .image
-                            {
-                                margin: 0 ;
-                                margin-top: px;
-                                padding: 0;
-                            }
                         }
                         .content
                         {
                             padding:  0 5px;
+                            margin: 0;
+                            padding: 0;
                             box-sizing: border-box;
-                            img
+                            .image
                             {
-                                padding-top: 5px;
+                                margin-top: 0px;
                             }
                             .title
                             {
                                 font-size: 14px;
+                                padding: 0;
+                                margin-top: 5px;
                             }
                             .description{
-                                font-size: 12px;
+                                font-size: 10px;
                                 overflow: hidden;
                                 text-overflow: ellipsis;
                                 -webkit-line-clamp: 2;
                                 display: -webkit-box;
                                 -webkit-box-orient: vertical;
+                                margin-top: -10px;
+                                padding: 0;
                                 &:hover
                                 {
                                     -webkit-line-clamp: 4; 
@@ -1200,10 +1202,11 @@
             }
             .product-inner
             {   
+                margin: 0 20px;
                 .product-detail-cover
                 {
                     width: 100%;
-                    margin: 30px 20px;
+                    margin: 30px 0px;
                     margin-bottom: 0px;
                     .product-detail-boder
                     {
@@ -1356,7 +1359,7 @@
                                      
                                     }
                                     a{
-
+                                        font-size: 10px;
                                     }
                                 }
                             }
