--- a/less/base/_responsive.less
+++ b/less/base/_responsive.less
@@ -266,7 +266,7 @@
                                 .nav-icon
                                 {
                                     display: block;
-                                    padding-top: 4px;
+                                    padding-top: 7px;
                                     font-size: 23px;
                                 }
         
@@ -302,6 +302,8 @@
                         {
                             .control-item
                             {
+                                border: none;
+                                padding: 0 15px;
                                 font-size: 15px;
                                 &:last-child
                                 {
