--- a/css/style.css
+++ b/css/style.css
@@ -597,7 +597,7 @@ footer .footer-main .footer-end-inner .footer-item ul .link-item a:hover {
   }
   .wrapper .banner-background .header-top-inner .logo-menu .navbar .nav-icon {
     display: block;
-    padding-top: 4px;
+    padding-top: 7px;
     font-size: 23px;
   }
   .wrapper .banner-background .header-top-inner .logo-menu .navbar .menu {
@@ -622,6 +622,8 @@ footer .footer-main .footer-end-inner .footer-item ul .link-item a:hover {
     border-bottom: 1px solid #575050;
   }
   .wrapper .banner-background .header-top-inner .form-control .control-item {
+    border: none;
+    padding: 0 15px;
     font-size: 15px;
   }
   .wrapper .banner-background .banner-introduce {
