--- a/less/base/_header.less
+++ b/less/base/_header.less
@@ -434,7 +434,7 @@
             width: 52px;
             margin: 40px auto;
             .circle
-            {
+            {   cursor: pointer;
                 height: 10px;
                 width: 10px;
                 border-radius: 5px;
