--- a/less/base/_header.less
+++ b/less/base/_header.less
@@ -340,7 +340,7 @@
                     {
                         font-family: 'Poppins';
                         font-size: 14px;
-                        font-weight: 400;
+                        font-weight: 300;
                         margin-left: 15px;
                     }
                     .price
@@ -406,6 +406,8 @@
             p{
                 text-align: center;
                 font-size: 18px;
+                font-family: 'Poppins';
+                font-weight: 300;
                 line-height: 30px;
                 white-space: 1px;
             }
