--- a/less/base/_responsive.less
+++ b/less/base/_responsive.less
@@ -451,12 +451,12 @@
                 margin: 0 15px;
                 .product-detail-cover
                 {
-                    width: calc(100%/3);
+                    width: 50%;
                     .product-detail-boder
                     {
                         .product-image
                         { 
-                            padding-top: 5px;
+                            padding-top: 40%;
                             img
                             {  
 
@@ -1204,12 +1204,11 @@
             }
             .product-inner
             {   
-                margin: 0 20px;
+               
                 .product-detail-cover
                 {
                     width: 100%;
-                    margin: 30px 0px;
-                    margin-bottom: 0px;
+                   
                     .product-detail-boder
                     {
                        
