--- a/less/base/_responsive.less
+++ b/less/base/_responsive.less
@@ -254,6 +254,7 @@
                     {
                         padding-top: 0px;
                         padding-bottom: 0px;
+                        height: 50px;
                         .logo-menu
                         {
                         
@@ -266,8 +267,10 @@
                                 .nav-icon
                                 {
                                     display: block;
+                                    padding-left: 15px;
                                     padding-top: 7px;
                                     font-size: 23px;
+                                    cursor: pointer;
                                 }
         
                                 .menu{
