--- a/less/base/_footer.less
+++ b/less/base/_footer.less
@@ -1,6 +1,6 @@
 footer
 {
-    margin-top: 30px;
+    margin-top: 34px;
     .footer-main
     {
         background-color: #212121;
@@ -21,23 +21,25 @@ footer
                 font-family: 'Poppins';
                 font-weight: 300;
                 font-size: 14px;
-                line-height: 25px;
+                line-height: 24px;
                 color: #575757;
                 text-align: center;
                 margin: 0 auto;
-                margin-top: 35px;
-                margin-bottom: 36px;
+                margin-top: 33px;
+                letter-spacing: 0px;
             }
             .icon-social
             {
-                
+                margin-top: 40px;
                 .icon-inner
                 {   
-                    width: 261px;
+                    width: 252px;
                     margin: 0 auto;
+                    display: flex;
+                    justify-content: space-around;
                     img
                     {
-                        margin: 0 22px;
+                      
                     }
                 }
             }
@@ -46,40 +48,43 @@ footer
         {   margin: 0px -15px;
             height: 1px;
             margin-top: 53px;
-           background-color: #948989;
-           opacity: 0.2;
+            background-color: #948989;
+            opacity: 0.2;
         }
         .footer-end-inner
         {
-            margin-top: 55px;
-            padding-bottom: 32px;
-        
+            margin-top: 53px;
+            margin-left: -15px;
+            margin-right: -15px;
             .footer-item
             {
-                width: 25%;
+                max-width: 300px;
+                width: 100%;
                 p{
                     font-size: 18px;
                     font-family: 'Poppins';
                     font-weight: 500;
                     color: white;
                     text-transform: uppercase;
+                    margin-left: 12px;
                 }
                 ul
                 {
-                    padding-top: 10px;
+                    padding-top: 8px;
                     .link-item
                     {
-                        margin-bottom: 15px;
-                        i{
-                            
+                        margin-bottom: 16px;
+                        i{ 
                             color: #5e5e5e;
-                            width: 20px;
+                            width: 12px;
+                            margin-left: 12px;
                         }
                         a{
                             color: #5e5e5e;
                             font-size: 14px;
                             font-family: 'Poppins';
                             font-weight: 300;
+                            margin-left: 12px;
                             &:hover
                             {
                                 color: burlywood;
