--- a/less/base/_header.less
+++ b/less/base/_header.less
@@ -20,16 +20,15 @@
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
-                padding-top: 23px;
-                padding-bottom:23px;
+                height: 100px;
                 margin: 0 -15px;
                 .logo-menu
                 {
                     display: flex;
                     height: 54px;
-                    .logo{
-                        margin-right: 60px;
-                              
+                    .logo
+                    {
+                        margin-right: 60px;       
                     }
                     .navbar
                     {
@@ -55,7 +54,6 @@
                             }
                         }
                     }
-                   
                 }
                 .form-control
                 {
@@ -63,7 +61,7 @@
                     color: white;
                     justify-content: center;
                     align-items: center;
-                   margin-right: 2px;
+                    margin-right: 2px;
                     .control-item
                     {
                         padding: 0 27px;
@@ -112,11 +110,11 @@
                     {
                             font-family: 'Poppins';
                             line-height: 24px;
+                            height: 60px;
                             font-weight: 200;
                             font-size: 14px;
                             max-width: 525px;
                             width: 100%;
-                            height: 60px;
                             margin-top: -20px;   
                             margin-left: 2px;  
                     }
@@ -373,7 +371,7 @@
 //comment
 .comment
 {   
-    margin-top: 25px;
+    margin-top: 26px;
     margin-bottom: 95px;
     .comment-inner
     {
@@ -391,7 +389,7 @@
             margin-left: auto;
             margin-right: auto;
             margin-top: 45px;
-            margin-bottom: 23px;
+            margin-bottom: 22px;
             background-image: url('../img/avatar-circle.png');
             background-repeat: no-repeat;
             background-position-x: -58px;
@@ -466,7 +464,7 @@
             flex-wrap: wrap;
             align-items: center;
             justify-content: space-between;
-            margin-top: 42px;
+            margin-top: 39px;
             
         } 
 }
